--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
+
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
